Enemy trainer tab is real

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -267,7 +267,7 @@ button:hover {
   display: flex;
 }
 
-#pokeParty {
+#pokeParty, #trainerParty {
   display: flex;
   flex-direction: column;
   gap: 10px;
