Remote enemy trainer reveals

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -714,6 +714,11 @@ button:hover {
   text-align: center;
 }
 
+.pokeAbilityDiv, .pokeItemDiv {
+  position: relative;
+  display: flex;
+}
+
 .detailsMoves {
   display: flex;
   flex-direction: column;
