--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -28,7 +28,7 @@ html, body {
     width: 1421px;
     height: 853px;
     left: 451px;
-    top: 41px;
+    top: 29px;
     border-radius: 10px;
 }
 #borderMainScreen {
@@ -43,7 +43,7 @@ html, body {
     width: 395px;
     height: 297px;
     left: 36px;
-    top: 42px;
+    top: 29px;
     border-radius: 10px;
 }
 #borderBotScreen {
@@ -58,7 +58,7 @@ html, body {
 
 #playerInfo {
     position: absolute;
-    top: 370px;
+    top: 355px;
     left: 52px;
     width: 373px;
     display: flex;
@@ -167,7 +167,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 
 .vsWildTypeDiv {
@@ -179,6 +179,7 @@ html, body {
 .typeIcon {
     height: 26px;
     filter: drop-shadow(0px 0px 2px black);
+    transform: translateY(-1px);
 }
 
 
@@ -300,7 +301,7 @@ html, body {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 175px;
+    height: 187px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -483,7 +484,7 @@ html, body {
     display: flex;
     width: 100%;
     height: 175px;
-    bottom: 0px;
+    bottom: 6px;
     font-family: "Aero";
     color: #f8f8f8;
 }
