--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -483,8 +483,8 @@ html, body {
     position: absolute;
     display: flex;
     width: 100%;
-    height: 175px;
-    bottom: 6px;
+    height: 181px;
+    bottom: 3px;
     font-family: "Aero";
     color: #f8f8f8;
 }
@@ -534,7 +534,7 @@ html, body {
     --activeColor: var(--healthy);
 
     position: relative;
-    height: 120px;
+    height: 126px;
     width: 300px;
     border: thick double var(--activeColor);
     overflow: visible;
@@ -608,7 +608,7 @@ html, body {
 }
 .activeSubText {
     display: flex;
-    gap: 6px;
+    gap: 4px;
     font-size: 20px;
 }
 
@@ -643,27 +643,42 @@ html, body {
     flex-direction: column;
     justify-content: center;
     gap: 1px;
-    font-size: 19px;
 }
 
 .activeMoveDiv {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 200px;
+    width: 100%;
     text-shadow: 0px 0px 5px black;
     border: 1px solid lightgray;
     padding: 2px 10px;
     border-radius: 10% / 100% 100% 100% 100%;
 }
+.activeMoveDiv1v1 {
+    width: 200px;
+}
+.activeMoveDiv2v2 {
+    width: 162px;
+}
+.activeMoveDiv2v2 .activeMoveName {
+    font-size: 19px;
+    max-width: 96px;
+    overflow: hidden;
+}
+.activeMoveDiv3v3 {
+    display: none;
+}
 
 .activeMoveName {
     transform: translateY(1px);
+    font-size: 20px;
 }
 .activeMoveRight {
     display: flex;
     gap: 2px;
     transform: translateY(1px);
+    font-size: 19px;
 }
 
 
