--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -129,7 +129,7 @@ html, body {
 #wildEncounterDiv {
     opacity: 0;
     position: absolute;
-    top: 370px;
+    top: 358px;
     left: 52px;
     width: 373px;
     font-family: "Aero";
@@ -476,7 +476,6 @@ html, body {
 }
 
 
-
 /** Battle Bottom Bar */
 
 #battleDiv {
@@ -680,6 +679,9 @@ html, body {
     transform: translateY(1px);
     font-size: 19px;
 }
+.activeMoveHidePP {
+    display: none;
+}
 
 
 /** Bottom Battle Bar */
@@ -801,6 +803,32 @@ html, body {
         opacity: 1;
         transform: translateX(0px);
     }
+}
+
+@keyframes hidePokes {
+    from {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+}
+@keyframes showPokes {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes iDontFeelSoGood {
+    from {opacity: 1;}
+    to {opacity: 0;}
 }
 
 @keyframes shake {
