Use better in-battle ability memory address

--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -672,6 +672,7 @@ html, body {
 .activeMoveName {
     transform: translateY(1px);
     font-size: 20px;
+    text-wrap: nowrap;
 }
 .activeMoveRight {
     display: flex;
