--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -887,6 +887,13 @@ button:hover {
   align-items: center;
   gap: 20px;
 }
+.badgesColumns {
+  flex-direction: column;
+  gap: 5px !important;
+}
+.badgesColumns .badgesWrap {
+  gap: 10px;
+}
 
 .badgeDisabled {
   filter: grayscale(1);
