--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -308,11 +308,6 @@ button:hover {
 }
 
 
-.finderPosition {
-  position: relative;
-  display: flex;
-}
-
 .finderEntry {
   display: flex;
   align-items: center;
@@ -411,18 +406,20 @@ button:hover {
 
 
 .finder {
-  display: none;
   position: absolute;
+  top: 10px;
   width: 180px;
-  top: 100%;
-  left: 0;
   filter: drop-shadow(0px 0px 5px var(--bg3));
-  z-index: 5;
   max-height: 165px;
 }
-.pokeSelector:focus-within .finder {
-  display: block;
+.finder:popover-open {
+  color: inherit;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
 }
+
 .listSearch {
   outline: none;
   border: none;
