Auto read enemy trainer name (its a surprise tool that will help us later)

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -1086,6 +1086,11 @@ button:hover {
 }
 
 
+/* VS Trainer stuff */
+#trainerNameInp {
+  width: 150px;
+}
+
 /* Settings stuff */
 #settingsList {
   overflow-y: auto;
