--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -612,6 +612,47 @@ html, body {
     display: flex;
     gap: 4px;
     font-size: 20px;
+    align-items: center;
+}
+
+.activeItemDiv {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+.activeItemImgDiv {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    margin-left: 2px;
+}
+.activeItemImgBg {
+    position: absolute;
+    background-color: #ffffff30;
+    border: #d3d3d390 1px solid;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    transform: scale(1.2);
+}
+.activeItemImgQue {
+    display: none;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    opacity: .7;
+}
+.activeItemImg {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    object-fit: none;
+    image-rendering: pixelated;
+    display: inline-block;
+}
+.activeItem {
+    display: none;
 }
 
 .activeHpDiv {
