Make BW2 overlay use XY overlay scripts

--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -356,6 +356,19 @@ html, body {
     image-rendering: pixelated;
 }
 
+.pokeDivMask {
+    display: none;
+}
+
+
+#battleDiv {
+    display: none;
+}
+
+
+#enemyNameIntroDiv {
+    display: none;
+}
 
 
 #connErrorDiv {
